# kinect-macos-sdk

./: CMakeLists.txt  README.md
src/: algorithm_interface.h  kinect_interface.h
